Working with background calls

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "@voximplant/react-native-foreground-service": "^3.0.2",
     "react": "17.0.2",
     "react-native": "0.68.5",
+    "react-native-android-sms-listener": "^0.8.0",
     "react-native-background-actions": "^2.6.7",
     "react-native-background-timer": "^2.4.1",
     "react-native-battery": "^0.1.18",
