--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       tools:replace="android:allowBackup">
+      <service android:name="com.voximplant.foregroundservice.VIForegroundService" android:exported="false"> </service>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
